--- a/oehealth_idn/report/rujukan_pasien_report.xml
+++ b/oehealth_idn/report/rujukan_pasien_report.xml
@@ -2,14 +2,6 @@
 <odoo>
     <template id="report_rujukan_pasien">
         <style>
-            #fontsize {
-                font-size:11px;
-            }
-
-            #fontsizeheader {
-                font-size:9px;
-                font-family: Arial, Helvetica, sans-serif;
-            }
 
             table, th, td {
                 padding: 8px;
@@ -17,9 +9,6 @@
                 border-spacing: 15px;
                 font-family: "Times New Roman", Times, serif;
                 font-size:9px;
-            }
-            hr.new4 {
-                border: 1px solid black;
             }
         </style>
         
@@ -34,43 +23,38 @@
             <t t-set="company" t-value="res_company"/>
         </t>
         <div class="header">
-                <div class="row">
-                    <div class="col-xs-3">
-                        <img t-if="company.logo" style="width:70px;height:70px;" t-att-src="'data:image/png;base64,%s' %company.logo"/>
-                    </div>
-                    <div class="col-xs-9">
-                        <t t-foreach="docs" t-as="o">
-                            <div class="row text-center">
-                                <br/>
-                                <h3><span t-field="o.unit.operating_id.name" /></h3>
-                            </div>
-                            <div class="row text-center" id="fontsizeheader">
-                                <span t-field="o.unit.operating_id.unit_address" />
-                            </div>
-                            <div class="row text-center" id="fontsizeheader">
-                                No. Izin Klinik : <span t-field="o.unit.operating_id.izin_klinik" />
-                            </div>
-                            <div class="row text-center" id="fontsizeheader">
-                                No. Izin Apotik : <span t-field="o.unit.operating_id.izin_apotik" />
-                            </div>
-                        </t>
-                    </div>
+            <div class="row" style="border-bottom: 1px solid black;">
+                <div class="col-xs-3">
+                    <img t-if="company.logo" style="width:70px;height:70px;" t-att-src="'data:image/png;base64,%s' %company.logo"/>
+                </div>
+                <div class="col-xs-9" style="position: relative;">
+                    <t t-foreach="docs" t-as="o">
+                        <h2><span t-field="o.unit.operating_id.name" /></h2> <br/>
+                        <span t-field="o.unit.operating_id.unit_address" /><br/>
+                        No. Izin Klinik : <span t-field="o.unit.operating_id.izin_klinik" /><br/>
+                        No. Izin Apotik : <span t-field="o.unit.operating_id.izin_apotik" />
+                        
+                    </t>
                 </div>
             </div>
-            <hr class="new4"/>
+        </div>
+           
         <div class="page">
             <div class="oe_structure">
                 <t t-foreach="docs" t-as="o">
+                    <br/>
                     <h2 style="text-align:center;">FORMULIR RUJUKAN PASIEN</h2>
+                    <br/>
+                    <br/>
                     <p style="text-align:right;">
                         Kepada Yth, TS
                         <br />
                         <span t-field="o.unit_administration" />
                         <span t-field="o.unit_administration_internal.name" /><br/>
-                        <span t-field="o.reference_hospital" />
-                        <br/><br/>
+                        <span t-field="o.reference_hospital" /><br/>
                         Di Tempat
                     </p>
+                    <br/><br/>
                     <t t-set="nomor" t-value="1" />
 
                     <t t-foreach='o.evaluation_id' t-as='line'>
@@ -78,7 +62,7 @@
                         <table style="width:100%; padding: 6px;">
                             <tr>
                                 <td style="border: 1px solid black; width:50%; padding: 6px;">
-                                    <table style="width:50%">
+                                    <table style="width:100%">
                                         <tr>
                                             <td colspan="3">IDENTITAS PASIEN</td>
                                         </tr>
@@ -169,13 +153,13 @@
                                             <td><span t-field="line.gds" /> mg/dl</td>
                                         </tr>
                                         <tr>
-                                            <td>
+                                            <td colspan="3">
                                                 TINDAKAN YANG SUDAH DI LAKUKAN :
                                                 <br />
                                                 <span t-field="line.notes_complaint" />
                                                 <br />
                                                 ________________________________________
-                                                <br />
+                                                <br /><br/>
                                             </td>
 
                                         </tr>
@@ -184,7 +168,7 @@
                                 <td style="border: 1px solid black;vertical-align: top; padding: 6px;">
                                     <table style="width:100%">
                                         <tr>
-                                            <td colspan="4">TERAPI YANG SUDAH DIBERIKAN : </td>
+                                            <td colspan="4">TERAPI YANG SUDAH DIBERIKAN : <br/></td>
                                         </tr>
                                         <tr>
                                             <th style="border: 1px solid black;">No</th>
@@ -218,11 +202,12 @@
                     
                     </t>
                 </t>
-
+                <br/><br/>
                 <p>Atas kerjasamanya, kami mengucapkan terimakasih</p>
-
+                <br/><br/>
                 <p style="text-align:right;">Kijang,<span t-esc="context_timestamp(datetime.datetime.now()).strftime('%d-%m-%Y')"/></p>
                 <center>
+                <br/><br/><br/>
                 <table style="width:90%;">
                     <tr>
                         <td>PETUGAS PENGANTAR</td>
@@ -257,7 +242,9 @@
                         <td>(_______________________)</td>
                         <td>(_______________________)</td>
                     </tr>
-                </table></center>
+                </table>
+                <br/><br/>
+                </center>
                 <p>
                     Lampiran :
                     <br />
