--- a/oehealth_idn/report/rujukan_radiologi_report.xml
+++ b/oehealth_idn/report/rujukan_radiologi_report.xml
@@ -1,122 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <template id="report_rujukan_radiologi">
-        <style>
-            #fontsize {
-                font-size:11px;
-            }
-
-            #fontsizeheader {
-                font-size:9px;
-                font-family: Arial, Helvetica, sans-serif;
-            }
-
-            #table1, th, td {
-                padding: 8px;
-                border-collapse: separate;
-                border-spacing: 15px;
-                font-family: "Times New Roman", Times, serif;
-            }
-            hr.new4 {
-                border: 1px solid black;
-            }
-        </style>
-        <t t-call="report.html_container">
-            <!-- Multicompany -->
-            <t t-if="not o and doc">
-                <t t-set="o" t-value="doc"/>
-            </t>
-            <t t-if="o and 'company_id' in o">
-                <t t-set="company" t-value="o.company_id"/>
-            </t>
-            <t t-if="not o or not 'company_id' in o">
-                <t t-set="company" t-value="res_company"/>
-            </t>
-
-            <div class="page">
-                <div class="header">
-                    <div class="row">
-                        <div class="col-xs-3">
-                            <img t-if="company.logo" style="width:70px;height:70px;" t-att-src="'data:image/png;base64,%s' %company.logo"/>
-                        </div>
-                        <div class="col-xs-9">
-                            <t t-foreach="docs" t-as="o">
-                                <div class="row text-center">
-                                    <br/>
-                                    <h3><span t-field="o.unit.operating_id.name" /></h3>
-                                </div>
-                                <div class="row text-center" id="fontsizeheader">
-                                    <span t-field="o.unit.operating_id.unit_address" />
-                                </div>
-                                <div class="row text-center" id="fontsizeheader">
-                                    No. Izin Klinik : <span t-field="o.unit.operating_id.izin_klinik" />
-                                </div>
-                                <div class="row text-center" id="fontsizeheader">
-                                    No. Izin Apotik : <span t-field="o.unit.operating_id.izin_apotik" />
-                                </div>
+        <div class="header">
+            <div class="container" style="border-bottom: 1px solid black;">
+                <table style="width:100%">
+                    <tr>
+                        <td style="text-align:center; padding:8px; width:15%;">
+                                                
+                            <!-- Multicompany -->
+                            <t t-if="not o and doc">
+                                <t t-set="o" t-value="doc"/>
                             </t>
+                            <t t-if="o and 'company_id' in o">
+                                <t t-set="company" t-value="o.company_id"/>
+                            </t>
+                            <t t-if="not o or not 'company_id' in o">
+                                <t t-set="company" t-value="res_company"/>
+                            </t>
+                            <br/>
+                            <img style="width:50px;height:50px;" t-if="company.logo" t-att-src="'data:image/png;base64,%s' %company.logo"/>
+                            
+                        </td>
+                        <td style="text-align:bottom; padding:8px;">
+                            
+                            <t t-foreach="docs" t-as="o">
+                                <h4><span t-field="o.unit.operating_id.name"/></h4>
+                                <h5><span t-field="o.unit.operating_id.unit_address"/></h5>
+                                <h6>No. Izin Klinik : <span t-field="o.unit.operating_id.izin_klinik"/></h6>
+                                <h6>No. Izin Apotik : <span t-field="o.unit.operating_id.izin_apotik"/></h6>
+                            </t>
+                            
+                        </td>
+                    </tr>
+                </table>  
+            </div>
+        </div>
+        <t t-call="report.html_container">
+            
+                <div class="oe_structure">
+                    <div class="page">
+                    <br/><br/><br/><br/><br/><br/><br/><br/><br/>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <t t-foreach="docs" t-as="o">
+                                        <center>
+                                            <table style="width:80%">
+                                                <tr>
+                                                    <td><strong>Kepada Yth,</strong>
+                                                        <strong>
+                                                            <p>Bagian Radiologi</p>
+                                                            <span t-field="o.unit_administration" />
+                                                            <span t-field="o.unit_administration_internal.name" /><br/>
+                                                            <span t-field="o.reference_hospital" />
+                                                            <br/><br/>
+                                                        </strong></td>
+                                                </tr>
+                                                <tr>
+                                                    <td><br/><br/></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>
+                                                        <strong>Mohon dilakukan pemeriksaan : <br/>
+                                                        <t t-foreach="o.evaluation_id" t-as="l">
+                                                            <t t-if="l.doctor.is_doctor == true">
+                                                                <span t-field="l.notes_complaint" />
+                                                            </t>
+                                                        </t>
+                                                        </strong>
+                                                        <br/><br/>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td><strong>Nama pasien: </strong>
+                                                        <span t-field="o.patient.name" /><br/><br/></td>
+                                                </tr>
+                                                <tr>
+                                                    <td><strong>Tanggal Lahir:</strong>
+                                                        <span t-field="o.patient.dob" t-field-options='{"format": "d MMMM y"}' /><br/><br/></td>
+                                                </tr>
+                                                <tr>
+                                                    <td><strong>Umur: </strong>
+                                                        <span t-field="o.patient.age" /><br/><br/><br/><br/></td>
+                                                </tr>
+                                                <tr>
+                                                    <td><br/><br/><p>Demikian, Terima Kasih</p><br/><br/><br/></td>
+                                                </tr>
+                                                <tr>
+                                                    <td><p style="text-align:center;">Kijang,<span t-esc="context_timestamp(datetime.datetime.now()).strftime('%d-%m-%Y')"/></p>
+                                                    <br/><br/><br/><br/><br/><br/>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td><p style="text-align:center;">( <span t-field="o.doctor" /> )</p></td>
+                                                </tr>
+                                            </table>
+                                        </center>
+                                     </t>    
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <hr class="new4"/>
-
-                <t t-foreach="docs" t-as="o">
-                    <div class="oe_structure" id="fontsize">
-                        <center>
-                            <table style="width:80%" id="table1">
-                                <tr>
-                                    <td><strong>Kepada Yth,</strong>
-                                        <strong>
-                                            <p>Bagian Radiologi</p>
-                                            <span t-field="o.unit_administration" />
-                                            <span t-field="o.unit_administration_internal.name" /><br/>
-                                            <span t-field="o.reference_hospital" />
-                                            <br/><br/>
-                                        </strong></td>
-                                </tr>
-                                <tr>
-                                    <td><br/><br/></td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <strong>Mohon dilakukan pemeriksaan : <br/>
-                                        <t t-foreach="o.evaluation_id" t-as="l">
-                                            <t t-if="l.doctor.is_doctor == true">
-                                                <span t-field="l.notes_complaint" />
-                                            </t>
-                                        </t>
-                                        </strong>
-                                        <br/><br/>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td><strong>Nama pasien: </strong>
-                                        <span t-field="o.patient.name" /><br/><br/></td>
-                                </tr>
-                                <tr>
-                                    <td><strong>Tanggal Lahir:</strong>
-                                        <span t-field="o.patient.dob" t-field-options='{"format": "d MMMM y"}' /><br/><br/></td>
-                                </tr>
-                                <tr>
-                                    <td><strong>Umur: </strong>
-                                        <span t-field="o.patient.age" /><br/><br/><br/><br/></td>
-                                </tr>
-                                <tr>
-                                    <td><br/><br/><p>Demikian, Terima Kasih</p><br/><br/><br/></td>
-                                </tr>
-                                <tr>
-                                    <td><p style="text-align:center;">Kijang,<span t-esc="context_timestamp(datetime.datetime.now()).strftime('%d-%m-%Y')"/></p>
-                                    <br/><br/><br/><br/><br/><br/>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td><p style="text-align:center;">( <span t-field="o.doctor" /> )</p></td>
-                                </tr>
-                            </table>
-                        </center>
-                    </div>
-                </t>
-            </div>
+           
         </t>
     </template>
 </odoo>
